# live-vdom

./: .gitignore  .gitmodules  LICENSE  README.md  changelog.md  live-vdom.cabal  rebuildSandbox.sh  shakespeare-dynamic.cabal  shakespeare-dynamic.cabal~  stack.yaml
example/: ShakespeareExample.hs
ghcjs-shakespeare-dynamic/: README.md  cabal  cabal.config  rebuildSandbox.sh  shakespeare-dynamic.cabal
ghcjs-shakespeare-dynamic/angular-integration/: index.html  script.js
ghcjs-shakespeare-dynamic/css/: bootstrap-responsive.css  custom.css  d3style.css  heatmap.css  nodding-donkey.css  onping-dialog.css  video-js.css
ghcjs-shakespeare-dynamic/example/: ShakespeareExample.hs  TankGauge.hs
ghcjs-shakespeare-dynamic/images/: square.hs  square.html
ghcjs-shakespeare-dynamic/js/: angu-fixed-header-table.js  codemirror.js  dash.all.js  login.js  onping-util.js  pascal.js  ui-bootstrap-0.1.0.min.js
ghcjs-shakespeare-dynamic/js/dialog/: dialog.js
ghcjs-shakespeare-dynamic/src/Shakespeare/: Dynamic.hs  Dynamic.hs~  Ophelia.hs
ghcjs-shakespeare-dynamic/src/Shakespeare/Dynamic/: Adapter.hs  Components.hs  Event.hs  Internal.hs  Render.hs
ghcjs-shakespeare-dynamic/src/Shakespeare/Dynamic/Opheilia/: #Parser.hs#  Parser.hs  Parser.hs~
ghcjs-shakespeare-dynamic/src/Shakespeare/Ophelia/: Parser.hs  QQ.hs
ghcjs-shakespeare-dynamic/src/Shakespeare/Ophelia/Parser/VDOM/: Live.hs  Types.hs
ghcjs-shakespeare-dynamic/test/Shakespeare/: DynamicSpec.hs
ghcjs-shakespeare-dynamic/test/Shakespeare/Dynamic/: AdapterSpec.hs
non-hackage-dependencies/ghcjs-vdom/: ghcjs-vdom.cabal
non-hackage-dependencies/ghcjs-vdom/src/GHCJS/: VDOM.hs
non-hackage-dependencies/ghcjs-vdom/virtual-dom/: lib.js
non-hackage-dependencies/stm-notify/: README.md  stm-notify.cabal
non-hackage-dependencies/stm-notify/src/Control/Concurrent/STM/: Notify.hs
non-hackage-dependencies/stm-notify/src/Control/Concurrent/STM/Notify/: Internal.hs
non-hackage-dependencies/stm-notify/test/Control/Concurrent/STM/: NotifySpec.hs
shakespeare-dynamic-opheilia/: LICENSE  README.md  shakespeare-dynamic-opheilia.cabal
shakespeare-dynamic-opheilia/src/Shakespeare/Dynamic/: Opheilia.hs
shakespeare-dynamic-opheilia/src/Shakespeare/Dynamic/Opheilia/: Internal.hs  Parser.hs  Parser.hs~
shakespeare-dynamic-opheilia/src/Shakespeare/Dynamic/Opheilia/Types/: VDomAdapter.hs  VDomAdapter.hs~
shakespeare-dynamic-opheilia/test/Shakespeare/Dynamic/: OpheiliaSpec.hs
shakespeare-dynamic-opheilia/test/Shakespeare/Dynamic/Opheilia/: ParserSpec.hs
shakespeare-ophelia/: README.md  shakespeare-ophelia.cabal
shakespeare-ophelia/src/Shakespeare/: Ophelia.hs
shakespeare-ophelia/src/Shakespeare/Ophelia/: Internal.hs  Parser.hs  QQ.hs
shakespeare-ophelia/src/Shakespeare/Ophelia/Parser/: VDOM.hs
shakespeare-ophelia/src/Shakespeare/Ophelia/Parser/Live/: Types.hs  VDOM.hs
shakespeare-ophelia/src/Shakespeare/Ophelia/Parser/VDOM/: Components.hs  Event.hs  Live.hs  Types.hs
shakespeare-ophelia/test/: Spec.hs
shakespeare-ophelia/test/Shakespeare/: OpheliaSpec.hs  Parser.hs
shakespeare-ophelia/test/Shakespeare/Parser/: VDOM.hs
shakespeare-ophelia/test/Shakespeare/Parser/Live/: VDOM.hs
src/: LiveVDom.hs
src/LiveVDom/: Adapter.hs  Combinators.hs  Components.hs  Event.hs  Internal.hs  Message.hs  Render.hs  TH.hs  Types.hs  UserTypes.hs
src/LiveVDom/Adapter/: Internal.hs  Types.hs
src/Shakespeare/: Dynamic.hs
test/Shakespeare/: DynamicSpec.hs
vdom-adapter/: README.md  vdom-adapter.cabal
vdom-adapter/src/VDOM/: Adapter.hs
vdom-adapter/src/VDOM/Adapter/: Internal.hs  Types.hs
vdom-adapter/test/VDOM/: AdapterSpec.hs
