Name:                   live-vdom
Version:                0.1.0
Author:                 Scott <scottmurphy09@gmail.com>
Maintainer:             Scott <scottmurphy09@gmail.com>
License:                MIT
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      LiveVDom
                        LiveVDom.Adapter
                        LiveVDom.Adapter.Types
                        LiveVDom.Components
                        LiveVDom.Event
                        LiveVDom.Message
                        LiveVDom.Render
                        LiveVDom.Types
  Other-Modules:        LiveVDom.Internal
                        LiveVDom.UserTypes
  Build-Depends:        base >= 4 && < 5
                      , template-haskell
                      , containers
                      , ghcjs-vdom
                      , ghcjs-ffiqq
                      , ghcjs-base >= 0.2.0.0
                      , text
                      , safe
                      , stm
                      , stm-notify >= 0.2
                      , here
                      , th-lift-instances

Source-Repository head
  Type:                 git
--  Location:             
