Name:                   shakespeare-dynamic
Version:                0.0.1
Author:                 Scott <scottmurphy09@gmail.com>
Maintainer:             Scott <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Shakespeare.Dynamic
  Other-Modules:        Shakespeare.Dynamic.Internal
  Build-Depends:        base >= 4 && < 5
                      , shakespeare == 2.0.1.7569
                      , ghcjs-vdom
                      , ghcjs-ffiqq
                      , ghcjs-base 
                      , ghcjs-dom


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
