Name:                   shakespeare-dynamic
Version:                0.0.1
Author:                 Scott <scottmurphy09@gmail.com>
Maintainer:             Scott <scottmurphy09@gmail.com>
License:                MIT
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

flag build-example
  description: build the example program
  default: False
  manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Shakespeare.Dynamic
                        Shakespeare.Dynamic.Adapter
                        Shakespeare.Dynamic.Render
  Other-Modules:        Shakespeare.Dynamic.Internal
  Build-Depends:        base >= 4 && < 5
                      , template-haskell
                      , containers
                      , parsec
                      , shakespeare == 2.0.1.7569
                      , ghcjs-vdom
                      , ghcjs-ffiqq
                      , ghcjs-base 
                      , ghcjs-dom
                      , vdom-adapter
                      , text
                      , aeson
                      , shakespeare-ophelia
                      , safe
                      , pipes


executable example
  if !flag(build-example)
      buildable: False
  Main-Is:        ShakespeareExample.hs
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  hs-source-dirs: example
  Build-Depends:  base                >= 4    &&  < 5
                , ghcjs-ffiqq
                , ghcjs-vdom
                , containers
                , template-haskell
                , ghcjs-base
                , shakespeare-dynamic
                , vdom-adapter
                , text
                , aeson
                , here
                , shakespeare-ophelia
                , trifecta
                , pipes
                , pipes-concurrency
                , transformers
  ghcjs-Options:    -O -Wall

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , shakespeare-dynamic

Source-Repository head
  Type:                 git
--  Location:             
