Name:                   shakespeare-dynamic-opheilia
Version:                0.0.1
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Shakespeare.Dynamic.Opheilia
                        Shakespeare.Dynamic.Opheilia.Parser
  Other-Modules:        Shakespeare.Dynamic.Opheilia.Internal
  Build-Depends:        base >= 4 && < 5
                       ,containers
                       ,shakespeare
                       ,parsec  
                       ,template-haskell

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , containers
                      , shakespeare
                      , parsec  
                      , here
                      , template-haskell

Source-Repository head
  Type:                 git
--  Location:             
