Name:                   shakespeare-ophelia
Version:                0.0.1
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Shakespeare.Ophelia
                        Shakespeare.Ophelia.Parser
                        Shakespeare.Ophelia.Parser.VDOM
  Other-Modules:        Shakespeare.Ophelia.Internal
  Build-Depends:        base >= 4 && < 5
                      , trifecta
                      , parsers
                      , text
                      , here
                      , containers
                      , safe
                      , vdom-adapter

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , trifecta
                      , parsers
                      , text
                      , here
                      , containers
                      , safe
                      , vdom-adapter
                      
Source-Repository head
  Type:                 git
--  Location:             
