Name:                   stm-notify
Version:                0.2.0
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Control.Concurrent.STM.Notify
  Other-Modules:        Control.Concurrent.STM.Notify.Internal
  Build-Depends:        base >= 4 && < 5
                      , stm
                      , async
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , stm
                      , async

Source-Repository head
  Type:                 git
--  Location:             
